# velox

./: CMakeLists.txt  README.md  folly.patch
.github/workflows/: unittest.yml
CMake/resolve_dependency_modules/: isal.cmake
CMake/resolve_dependency_modules/isal/: CMakeLists.txt
scripts/: setup-adapters.sh  setup-centos7.sh  setup-ubuntu.sh
velox/: CMakeLists.txt
velox/common/base/: BitUtil.h
velox/common/caching/: AsyncDataCache.h
velox/common/memory/: Memory.cpp  Memory.h  MemoryArbitrator.cpp  MemoryArbitrator.h  MemoryPool.cpp  MemoryPool.h  SharedArbitrator.cpp  SharedArbitrator.h
velox/connectors/: Connector.cpp  Connector.h
velox/connectors/fuzzer/: FuzzerConnector.h
velox/connectors/hive/: HiveConfig.cpp  HiveConfig.h  HiveConnector.cpp  HiveConnector.h  HiveDataSink.cpp  HiveDataSource.cpp  SplitReader.cpp
velox/connectors/tpch/: TpchConnector.h
velox/core/: PlanNode.cpp  PlanNode.h  QueryConfig.h  QueryCtx.h
velox/docs/develop/: operators.rst
velox/dwio/common/: BufferedInput.h  CMakeLists.txt  InputStream.cpp  Options.h  ParallelBufferedInput.cpp  SelectiveColumnReader.cpp  SelectiveStructColumnReader.cpp  Statistics.h  TypeWithId.cpp
velox/exec/: ArrowStream.h  CMakeLists.txt  Driver.cpp  GroupingSet.cpp  HashBuild.cpp  HashBuild.h  HashTable.cpp  HashTable.h  LocalPlanner.cpp  Operator.cpp  OrderBy.cpp  Spiller.cpp  StreamingWindowBuild.cpp  TableScan.cpp  Task.cpp  Task.h  Window.cpp  Window.h  WindowBuild.h
velox/exec/fuzzer/: AggregationFuzzerBase.h  WindowFuzzer.cpp  WindowFuzzer.h
velox/exec/tests/: ArrowStreamTest.cpp  (+7 more)
velox/expression/: CMakeLists.txt  CastExpr-inl.h  CastExpr.cpp  CastExpr.h  ComplexWriterTypes.h  RegisterSpecialForm.cpp  RowConstructorWithNull.cpp  RowConstructorWithNull.h  SwitchExpr.cpp
velox/flag_definitions/: flags.cpp
velox/row/: UnsafeRowFast.cpp
velox/substrait/: SubstraitToVeloxPlan.cpp  TypeUtils.cpp
velox/type/: Conversions.h  DecimalUtil.h  Filter.h  StringView.h  Timestamp.h  TimestampConversion.cpp  TimestampConversion.h  Tokenizer.h  Type.cpp  Type.h
velox/vector/: FlatVector-inl.h
(+100 files in other folders)
